--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1"
