--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.18",
     "flowbite-react": "^0.7.3",
     "localforage": "^1.10.0",
@@ -18,7 +19,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1"
